--- a/movie/templates/phimdangchieu.html
+++ b/movie/templates/phimdangchieu.html
@@ -44,7 +44,7 @@
     <div id="main">
         <div id="tren">
             <button id="but1" class="but" onclick="showDiv('duoi', 'dang', 'but', 'but1')">PHIM ĐANG CHIẾU</button>
-            <button id="but2" class="but" onclick="showDiv('duoi', 'sap', 'but', 'but2')">PHIM SẮP CHIẾU</button>
+            <button id="but2" class="but" onclick="showDiv('duoi', 'sap', 'but', 'but2')" style="color: red; text-decoration: underline; ">PHIM SẮP CHIẾU</button>
             <button id="but3" class="but" onclick="showDiv('duoi', 'dac', 'but', 'but3')">SUẤT CHIẾU ĐẶC BIỆT</button>
         </div>
         <div class="container">
