--- a/movie/templates/Sign-up.html
+++ b/movie/templates/Sign-up.html
@@ -17,13 +17,13 @@
 
     <header>
         <a href={% if name %}"{% url "movie:show_home" %}"{% else %}{% url "movie:show_login" %}{% endif %}><img class="header_img" src={% static 'logo_web.jpg' %} alt="Ảnh Logo"></a>
-        <select class="header-select" name="select" id="select">
+        {% comment %} <select class="header-select" name="select" id="select">
             <option value="Beta HN">Group3 Bắc Ninh</option>
             <option value="Beta TN">Group3 Thái Bình</option>
             <option value="Beta ĐN">Group3 Hải Phòng</option>
             <option value="Beta TB">Group3 Nghệ An</option>
             <option value="Beta KH">Group3 Hà Tĩnh</option>
-        </select>
+        </select> {% endcomment %}
         {% comment %} <div class="header_menu">
             <div class="menu_item"><a href="">LỊCH CHIẾU THEO RẠP</a></div>
             <div class="menu_item"><a href="">PHIM</a></div>
@@ -90,7 +90,7 @@
                     
                     <div class="row">
                         <div class="column" class="column-commitment">
-                            <p class="commitment"><input type="checkbox" class="box" name="policy" value="yes">Tôi cam kết tuân theo <a class="commitment-content" href="">chính sách bảo mật</a> và <a class="commitment-content" href="">điều khoản sử dụng</a> của Group3_Cinemas.</p>
+                            <p class="commitment"><input type="checkbox" class="box" name="policy" value="yes">Tôi cam kết tuân theo <a class="commitment-content" href="">chính sách bảo mật</a> và <a class="commitment-content" href="">điều khoản sử dụng</a> của Group5_Cinemas.</p>
                         </div>
                     </div>
                     <button type="submit" >Đăng ký</button> 
@@ -108,12 +108,12 @@
     <footer>
         <div class="footer-container">
             <div class="footer-column footer-introduce">
-                <h3>Group3 Việt Nam</h3>
+                <h3>Group 5 Việt Nam</h3>
                 <div><i class="fa-solid fa-arrow-right"></i><a href="#" target="_self">Giới thiệu</a></div>
                 <div><i class="fa-solid fa-arrow-right"></i><a href="#" target="_self">Tiện Ích Online</a></div>
                 <div><i class="fa-solid fa-arrow-right"></i><a href="#" target="_self">Thẻ Quà Tặng</a></div>
                 <div><i class="fa-solid fa-arrow-right"></i><a href="#" target="_self">Tuyển Dụng</a></div>
-                <div><i class="fa-solid fa-arrow-right"></i><a href="#" target="_self">Liên Hệ Quảng Cáo Group3</a></div>
+                <div><i class="fa-solid fa-arrow-right"></i><a href="#" target="_self">Liên Hệ Quảng Cáo Group5</a></div>
                 <div><i class="fa-solid fa-arrow-right"></i><a href="#" target="_self">Dành cho đối tác</a></div>
             </div>
             
@@ -140,7 +140,7 @@
                     Hotline: 1900 6017<br>
                     Giờ làm việc: 8:00 - 22:00 (Tất cả các ngày<br>
                     bao gồm cả Lễ Tết)<br>
-                    Email hỗ trợ: hoidap@group3.vn
+                    Email hỗ trợ: hoidap@group5.vn
                 </p>
             </div>
         </div>
