--- a/movie/templates/trangchu/trangchucdb.html
+++ b/movie/templates/trangchu/trangchucdb.html
@@ -16,14 +16,6 @@
 
     <header>
         <a href={% if name %}"{% url "movie:show_home" %}"{% else %}{% url "movie:show_login" %}{% endif %}><img class="header_img" src={% static 'logo_web.jpg' %} alt="Ảnh Logo"></a>
-        {% comment %} <select class="header-select" name="select" id="select">
-            <option value="G3HN">Group3 Hà Nội</option>
-            <option value="G3TN">Group3 Thái Nguyên</option>
-            <option value="G3TH">Group3 Thanh Hóa</option>
-            <option value="G3LC">Group3 Lào Cai</option>
-            <option value="G3BG">Group3 Bắc Giang</option>
-            <option value="G3NT">Group3 Nha Trang</option>
-        </select> {% endcomment %}
         <div class="header_menu">
             <div class="menu_item"><a href="{% url "movie:show_lich" %}">LỊCH CHIẾU THEO RẠP</a></div>
             <div class="menu_item"><a href="{% url "movie:show_movie" %}">PHIM</a></div>
@@ -153,13 +145,13 @@
             {% comment %} <h2 class="dangchieu"><button onclick="showDiv('duoi', 'dang')">PHIM ĐANG CHIẾU</button></h2>
             <h2 class="sapchieu"><button onclick="showDiv('duoi', 'sap')">PHIM SẮP CHIẾU</button></h2>
             <h2 class="dacbiet"><button onclick="showDiv('duoi', 'dac')">SUẤT CHIẾU ĐẶC BIỆT</button    ></h2> {% endcomment %}
-            <button id="but1" class="but" onclick="showDiv('duoi', 'dang', 'but', 'but1')">PHIM ĐANG CHIẾU</button>
-            <button id="but2" class="but" onclick="showDiv('duoi', 'sap', 'but', 'but2')">PHIM SẮP CHIẾU</button>
+            <button id="but1" class="but" onclick="showDiv('duoi', 'dang', 'but', 'but1')" style="background-color: red">PHIM NGOẠI QUỐC</button>
+            <button id="but2" class="but" onclick="showDiv('duoi', 'sap', 'but', 'but2')">PHIM VIỆT</button>
             <button id="but3" class="but" onclick="showDiv('duoi', 'dac', 'but', 'but3')">SUẤT CHIẾU ĐẶC BIỆT</button>
         </div>
         <div class="container">
             <div class="duoi" id="dang" >
-                {% for mov in dangchieu %}
+                {% for mov in ngoaiquoc %}
                 <div class="box">
                     <div class="anh">
                         <img src='{% static mov.mov_image %}' class="phim">
@@ -176,7 +168,7 @@
                 {% endfor %}
             </div>
             <div class="duoi" id="sap" style="display: none;">
-                {% for mov in sapchieu %}
+                {% for mov in vietnam %}
                 <div class="box">
                     <div class="anh">
                         <img src='{% static mov.mov_image %}' class="phim">
